testsuite/tests/properties/invalid_call/bad_arg_type/test.lkt
from common import FooNode

class BarNode: FooNode {
    @exported fun bar_prop(): Int = node.root_prop(null[FooNode])
}
